--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,1 +1,26 @@
+^.*\.Rproj$
+^.*\.py$
+^\.Rproj\.user$
+^\.drone.yml$
+^packrat/
+^\.Rprofile$
+^\.RData$
+^\.tmp$
+^README\.Rmd$
+^README\.md$
+^README_cache$
+^man/figures/*$
+^doc$
+^Meta$
+^tic\.R$
+^CODE_OF_CONDUCT.md$
+^contributing.md$
+^\.gcda$
+^\.gcno$
+^tags
+^\.swp
+^codemeta.json
+
+^\.github$
+^codecov\.yml$
 ^data-raw$
