--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,18 @@
 Package: treesburnareas
-Title: What the Package Does (One Line, Title Case)
+Title: Analysis of Fire Recurrence in the Amazon Forest
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Alber", "Sanchez", , "alber.ipia@inpe.br", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-7966-2880"))
+Description: Analysis fo the recurrence of fire in the Amazon forest using
+    using data from the Near Real Time Detection of Deforestation project 
+    (DETER) provided by INPE.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
 LazyData: true
+Depends: 
+    R (>= 3.5.0),
+    sf,
+    data.table
