--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: treesburnareas
 Title: Analysis of Fire Recurrence in the Amazon Forest
-Version: 0.0.0.9001
+Version: 0.0.0.9002
 Authors@R: 
     person("Alber", "Sanchez", , "alber.ipia@inpe.br", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7966-2880"))
@@ -28,3 +28,5 @@ Imports:
     tidyr,
     tidyselect,
     treemapify
+Remotes:
+    github::davidsjoberg/ggsankey
