--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: treesburnareas
 Title: Analysis of Fire Recurrence in the Amazon Forest
-Version: 0.0.0.9002
+Version: 0.0.0.9003
 Authors@R: 
     person("Alber", "Sanchez", , "alber.ipia@inpe.br", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7966-2880"))
@@ -20,7 +20,9 @@ Imports:
     forcats,
     ggplot2,
     ggsankey,
+    lubridate,
     magrittr,
+    readr,
     scales,
     sf,
     stringr,
@@ -30,3 +32,6 @@ Imports:
     treemapify
 Remotes:
     github::davidsjoberg/ggsankey
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
