Trajectory tables with stats added.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: treesburnareas
 Title: Analysis of Fire Recurrence in the Amazon Forest
-Version: 0.0.0.9003
+Version: 0.0.0.9004
 Authors@R: 
     person("Alber", "Sanchez", , "alber.ipia@inpe.br", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7966-2880"))
@@ -20,8 +20,10 @@ Imports:
     forcats,
     ggplot2,
     ggsankey,
+    kableExtra,
     lubridate,
     magrittr,
+    purrr,
     readr,
     scales,
     sf,
