--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_plot_days_first_to_last)
 export(get_plot_density_area_ndays)
 export(get_plot_sankey)
 export(get_prodes_codes)
+export(get_trajectory_stats)
 export(process_prodes_codes)
 export(the_mode)
 importFrom(magrittr,"%>%")
