Tables of top trajectories added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(compute_prodes_year)
+export(create_plots)
 export(get_deter_classes)
 export(get_flat_subarea)
 export(get_plot_area_by_state_year_type)
@@ -13,5 +14,6 @@ export(get_plot_sankey)
 export(get_prodes_codes)
 export(get_trajectory_stats)
 export(process_prodes_codes)
+export(report_suspicious_trajectories)
 export(the_mode)
 importFrom(magrittr,"%>%")
