--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Imports:
     forcats,
     ggplot2,
     ggsankey,
+    janitor,
     kableExtra,
     lubridate,
     magrittr,
@@ -27,6 +28,7 @@ Imports:
     readr,
     scales,
     sf,
+    stats,
     stringr,
     tibble,
     tidyr,
