--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,23 @@ export(compute_prodes_year)
 export(create_plots)
 export(get_deter_classes)
 export(get_flat_subarea)
+export(get_plot_area_by_class)
+export(get_plot_area_by_class_state)
 export(get_plot_area_by_state_year_type)
 export(get_plot_area_by_warnings)
 export(get_plot_area_by_warnings_state)
 export(get_plot_days_first_to_last)
 export(get_plot_density_area_ndays)
 export(get_plot_sankey)
+export(get_plot_sankey_year)
 export(get_prodes_codes)
+export(get_prodes_names)
 export(get_trajectory_stats)
 export(process_prodes_codes)
 export(report_suspicious_trajectories)
+export(test_centroids)
 export(the_mode)
+export(trim_trajectories)
+importFrom(dplyr,.data)
 importFrom(magrittr,"%>%")
+importFrom(rlang,":=")
