Fire spot data added. 1 warning, 1 note.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export("%>%")
 export(compute_prodes_year)
 export(create_plots)
+export(filter_trajectory)
+export(flat_trajectory)
 export(get_deter_classes)
 export(get_flat_subarea)
 export(get_plot_area_by_class)
@@ -12,6 +14,7 @@ export(get_plot_area_by_warnings)
 export(get_plot_area_by_warnings_state)
 export(get_plot_days_first_to_last)
 export(get_plot_density_area_ndays)
+export(get_plot_fire_by_month)
 export(get_plot_sankey)
 export(get_plot_sankey_year)
 export(get_prodes_codes)
