--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,9 @@ LazyData: true
 Depends: 
     R (>= 3.5.0)
 Imports:
-    data.table,
     dplyr,
     forcats,
+    furrr,
     ggplot2,
     ggsankey,
     janitor,
