--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(get_plot_area_by_warnings_state)
 export(get_plot_days_first_to_last)
 export(get_plot_density_area_ndays)
 export(get_plot_fire_by_month)
+export(get_plot_fire_by_month_state)
 export(get_plot_sankey)
 export(get_plot_sankey_year)
 export(get_prodes_codes)
