--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Description: Analysis fo the recurrence of fire in the Amazon forest using
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 LazyData: true
 Depends: 
     R (>= 3.5.0)
@@ -18,6 +18,7 @@ Imports:
     dplyr,
     forcats,
     furrr,
+    geobr,
     ggplot2,
     ggsankey,
     janitor,
@@ -34,7 +35,8 @@ Imports:
     tibble,
     tidyr,
     tidyselect,
-    treemapify
+    treemapify,
+    units
 Remotes:
     github::davidsjoberg/ggsankey
 Suggests: 
